<resources>
    <string name="app_name">Solitaire</string>
    <string name="button_play">Play</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="toggle_one">One Card Draw</string>
    <string name="toggle_three">Three Card Draw</string>
    <string name="toggle_label">Switch between 1 and 3 card draw</string>
</resources>